# hw

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  output.csv  pyproject.toml  requirements.dev.txt
e2e_tests/: test_bom_lookup.py  test_convert_bom.py  test_convert_pos.py
src/hw/: __init__.py  config.py  init.py  main.py
src/hw/ai/: __init__.py  agent.py  config.py  mcp_client.py  models.py
src/hw/circuits/: __init__.py  query.py  resolver.py
src/hw/circuits/jlcpcb/: __init__.py
src/hw/circuits/jlcpcb/bom_lookup/: client.py  command.py  models.py  resolver.py
src/hw/circuits/kicad/: __init__.py
src/hw/circuits/kicad/convert/: command.py  models.py
src/hw/circuits/kicad/convert/sample_files/: kicad-generated-bom.csv  kicad-generated-pos.csv
src/hw/circuits/models/: bom.py  part.py
src/hw/circuits/shop/: command.py  config.py  digikey.py  models.py  mouser.py  search.py  workflow.py
src/hw/ui/: loading_bar.py  table.py
src/hw/utils/: logger.py
tests/hw_test/: conftest.py  test_ai_config.py  test_ai_models.py  test_bom.py  test_client.py  test_digikey.py  test_mouser.py  test_query.py  test_resolver.py  test_resolver_shared.py  test_shop_command.py  test_shop_config.py  test_shop_edge_cases.py  test_shop_models.py  test_shop_search.py  test_shop_workflow.py  test_table.py
