[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hw"
version = "0.1.0"
description = "A simple CLI tool"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "loguru>=0.7.3",
]

[project.scripts]
hw = "hw.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "e2e_tests"]

[tool.isort]
profile = "black"
